# DecayEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Decay.sln  DecayEngine.sln  GenerateProjects.bat  README.md  premake5.lua
Assets/Shaders/: 2DQuad.glsl  PBR.glsl
Assets/Shaders/include/: BRDF.glslinc  Lighting.glslinc
Decay/: CMakeLists.txt  Decay.vcxproj  Decay.vcxproj.filters  DecayEngine.vcxproj  DecayEngine.vcxproj.filters
Decay/src/: Decay.h  dcpch.cpp  dcpch.h
Decay/src/Decay/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h
Decay/src/Decay/Core/: Application.cpp  Application.h  EntryPoint.h  Layer.h  LayerStack.cpp  LayerStack.h  Timestep.cpp  Timestep.h  Window.h
Decay/src/Decay/Core/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Decay/src/Decay/Events/: ApplicationEvent.h  KeyEvent.h  MouseEvent.h
Decay/src/Decay/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Decay/src/Decay/Input/: Input.h  KeyCodes.h  MouseButtonCodes.h
Decay/src/Decay/Logger/: Logger.h
Decay/src/Decay/Profile/: Instrumentor.hpp  Timer.cpp  Timer.h
Decay/src/Decay/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.h  Material.cpp  Material.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Decay/src/Decay/Scene/: Components.hpp  Entity.cpp  Entity.h  Entity.hpp  Lights.hpp  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  UUID.cpp  UUID.h
Decay/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLMaterial.cpp  OpenGLMaterial.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
Decay/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  imgui.ini
Sandbox/Assets/: CMakeLists.txt
Sandbox/Assets/Shaders/: BRDF.glslinc  Lighting.glslinc  PBR.glsl
Sandbox/src/: Sandbox2D.cpp  Sandbox2D.h  Sandbox3D.cpp  Sandbox3D.h  SandboxApp.cpp
bin-int/x64-Debug/Decay/: Decay.dll.recipe  vc142.idb
scripts/: Win-GenProjects.bat
